# ipfspod

./: .gitignore  LICENSE  README.md  howto.html  pyproject.toml
ipfspod/: __init__.py  __main__.py  feed_template.xml.jinja  test_main.py
