[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "ipfspod"
author = "Sean Gallagher"
author-email = "stgallag@gmail.com"
home-page = "https://github.com/SeanTater/ipfspod"
requires = ["Jinja2 >= 2.11.2", "ipfshttpconnect", "filetype"]
